Prevent word breakage between web and developer so underline is always visible

--- a/_sass/hero.scss
+++ b/_sass/hero.scss
@@ -26,6 +26,7 @@
 
 .hero__accent-word {
   position: relative;
+  white-space: nowrap;
 
   &::after {
     content: "";
